# parsley

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: ci.yaml
parlsey/: __init__.py  factory.py  parser.py  utils.py
parsley_coco/: __init__.py  alternative_dataclasses.py  factory.py  logger.py  parser.py  py.typed  recursive_dataclass_with_path_to_yaml.py  sentinels.py  utils.py
src/parsley/: __init__.py  alternative_dataclasses.py  factory.py  logger.py  parser.py  py.typed  recursive_dataclass_with_path_to_yaml.py  utils.py
tests/: basic_tests.py  readme_test.py  tes_combinedexample.py  test_all_features.py  test_basic.py  test_command_line.py  test_configfile.py  test_extra_args.py  test_fullexample.py  test_int_dataclass.py  test_literal_enum_member.py  test_overwrite.py  test_parse_arguments.py  test_readme.py  test_recursive_dataclass_with_path_to_yaml.py  test_tag.py  test_utils.py
tests/yaml_files/: config.yaml  config_model.yaml  discriminator2.yaml  nested_1.yaml  nested_2.yaml  readme_extra.yaml  tag1.yaml  tag1_ywo.yaml  test_a.yaml  test_a2.yaml  test_a3.yaml  test_bim.yaml  test_conf_0.yaml  test_conf_1.yaml  test_conf_3.yaml  test_conf_tag_ywo.yaml  test_hop.yaml  test_int_dataclass1.yaml  test_int_dataclass2.yaml  test_int_dataclass3.yaml
tests_parsley/: tes_combinedexample.py  test_all_features.py  test_basic.py  test_command_line.py  test_configfile.py  test_extra_args.py  test_int_dataclass.py  test_literal_enum_member.py  test_overwrite.py  test_parse_arguments.py  test_readme.py  test_recursive_dataclass_with_path_to_yaml.py  test_tag.py  test_utils.py
tests_parsley/yaml_files/: discriminator.yaml  nested_1.yaml  preset_large.yaml  tag1_ywo2.yaml  tag2.yaml  test_a.yaml  test_a2.yaml  test_a3.yaml  test_b.yaml  test_bim.yaml  test_conf_2.yaml  test_conf_4.yaml  test_conf_tag.yaml  test_hop.yaml
