[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parsley-coco"
version = "0.1.27"
description = "A parser combining dacite and argparse"
license = "GPL-3.0-only"
license-files = ["LICENSE"]

readme = { file = "README.md", content-type = "text/markdown" }

authors = [
  { name = "Victor Gabillon", email = "victorgabillon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0.2",
    "dacite>=1.9.2",
    "click==8.1.8"
]


[project.optional-dependencies]
test = ["pytest>=7.0","types-PyYAML"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]


[tool.setuptools.package-data]
parsley_coco = [
  "data/**/*.yaml",
]



[project.urls]
"Homepage" = "https://github.com/victorgabillon/parsley"




[tool.pytest.ini_options]
testpaths = [
    "parsley_coco",
    "tests_parsley"
]


[tool.black]
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
